--- a/views/index.jade
+++ b/views/index.jade
@@ -3,7 +3,7 @@ include header.html
 #x.container
   #x.hero-unit
     p
-      | This app runs on #{hostname} (#{os}). Your request came from #{agent}.
+      | This app runs on #{hostname} (#{os}). Your request came from Anshul Browser i.e #{agent}.
       | The system time is #{time.toLocaleString()}.
       |  <strong>Page rendered using Node.js version #{nodeversion}</strong>.
 
